--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body.dark {
 }
 
 header {
+  position: fixed;
   width: 100%;
   height: 80px;
   background: var(--color-dark);
@@ -177,11 +178,14 @@ header {
 
 .nav-bar ul {
   display: flex;
+  align-items: center;
 }
 
 .nav-bar ul li a {
   text-decoration: none;
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 10px;
   color: var(--color-primary);
   font-size: 17px;
   padding: 10px 10px;
