--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 50px;
+  z-index:999;
 }
 
 /* Estilos para el loader */
@@ -234,7 +235,8 @@ header {
   display: inline-block;
   position: relative;
   margin: 10px;
-
+padding:90px;
+  z-index:8;
 }
 
 /* Estilos para el dropdown */
