--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ header {
   display: inline-block;
   position: relative;
   margin: 10px;
-padding:90px;
+padding:100px 0 0 0;
   z-index:8;
 }
 
